Add initial API code and attempts

--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "GitHubSettings": {
+    "PersonalAccessToken": "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"
+  },
+  "RepoSettings": {
+    "RepoOwner": "ccrawford02",
+    "RepoName": "BucStopTetris",
+    "FilePath": "BucStopTetris/blob/main/tetrisleaderboard.txt"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
