--- a/BucStop/BucStop.csproj
+++ b/BucStop/BucStop.csproj
@@ -9,7 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
+    <PackageReference Include="Octokit" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
