Fixed secret to be able to push

--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -1,11 +1,11 @@
 {
   "GitHubSettings": {
-    "PersonalAccessToken": "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"
+    "PersonalAccessToken": "" // Insert your PAT Here
   },
   "RepoSettings": {
     "RepoOwner": "ccrawford02",
     "RepoName": "BucStopTetris",
-    "FilePath": "BucStopTetris/blob/main/tetrisleaderboard.txt"
+    "FilePath": "tetrisleaderboard.txt"
   },
   "Logging": {
     "LogLevel": {
