Add how to play instructions API functionality

--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "GitHubSettings": {
-    "PersonalAccessToken": "" // Insert your PAT Here
+    "PersonalAccessToken": "" 
   },
   "RepoSettings": {
     "RepoOwner": "ccrawford02",
