--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  // Hard-coded, should be generalized later.
   "RepoSettings": {
     "RepoOwner": "ccrawford02",
     "RepoName": "BucStopTetris",
