////NOTE: AS OF RIGHT NOW, THIS IS NOT COMPLETE AND DOES NOT WORK\\\\
Heavy code refacotring and restructuring. Main changes are complete rewrites of GamesController.cs and GameInfoController.cs, along with restrucutring of control flow. In theory, the GameInfoHelper class will simply return the plaintext information the GamesController.cs file needs. The actual API, located in GameInfoContoller.cs uses octokit to pull data from github.

--- a/BucStop/appsettings.json
+++ b/BucStop/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "Micro": "https://localhost:7223"
+  "Micro": "https://localhost:7223",
+  "ApiBaseUrl": "https://localhost:5219/" // Update this to the actual base URL of your API
 }
