--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrl": "http://localhost:5219/"
 }
