More large refacotring. Have github retreival mostly working via swagger, but not in visual studio. Not completed.

--- a/BucStop/appsettings.json
+++ b/BucStop/appsettings.json
@@ -6,6 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "Micro": "https://localhost:7223",
-  "ApiBaseUrl": "https://localhost:5219/" // Update this to the actual base URL of your API
+  "ApiBaseUrl": "https://localhost:5219"
 }
