--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ServiceUrl": "http://localhost:5219/"
+  "GitHub": {
+    "RepositoryOwner": "ccrawford02",
+    "RepositoryName": "BucStopGames",
+    "AccessToken": "WHERE THE SECRET WOULD GO,,,, IF I HAD ONE!"
+  }
 }
