--- a/bucstopapi/appsettings.json
+++ b/bucstopapi/appsettings.json
@@ -1,11 +1,13 @@
-{
-  "GitHubSettings": {
-    "PersonalAccessToken": "" 
-  },
+{  
   "RepoSettings": {
     "RepoOwner": "ccrawford02",
-    "RepoName": "BucStopTetris",
-    "FilePath": "tetrisleaderboard.txt"
+    "RepoName": "BucStopGames",
+    "LeaderboardFilePath": "Leaderboard.txt",
+    "DescriptionFilePath": "Description.txt",
+    "GameCodeFilePath": "GameCode.js",
+    "GameInfoFilePath": "GameInfo.txt",
+    "HowToPlayFilePath": "HowToPlay.txt",
+    "ThumbnailFilePath": "Thumbnail.jpg"
   },
   "Logging": {
     "LogLevel": {
